feat: reservation features
