# app/Http/Controllers/AuthController.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers;
 
+use App\Enums\Role;
+use App\Models\Customer;
 use App\Models\User;
 use Illuminate\Http\Request;
 use Illuminate\Http\Response;
@@ -11,31 +13,40 @@ use Illuminate\Support\Facades\Validator;
 
 /**
  * @OA\Tag(
- *      name="Authentication",
+ *      name="authentication",
  * )
  */
 class AuthController extends Controller
 {
     /**
      * @OA\Post(
-     *     tags={"Authentication"},
+     *     tags={"authentication"},
      *     path="/register",
-     *     summary="Register a new user",
+     *     summary="Register a new customer user",
      *     @OA\RequestBody(
      *         @OA\JsonContent(
      *             @OA\Property(property="name", type="string", example="John Doe"),
      *             @OA\Property(property="email", type="string", format="email", example="jhon@gmail.com"),
+     *             @OA\Property(property="phone_number", type="string", example="081234567890"),
+     *             @OA\Property(property="address", type="string", example="AV. 1, No. 2, 3rd Floor"),
      *             @OA\Property(property="password", type="string", example="secretpassword"),
      *             @OA\Property(property="password_confirmation", type="string", example="secretpassword"),
      *         )
      *     ),
      *     @OA\Response(
      *          response="201", 
-     *          description="Created",
+     *          description="Created successfully",
      *          @OA\JsonContent(
      *              type="object",
      *              @OA\Property(property="token", type="string", example="0|WYgnFtfJU6oMR8Q852lFPjtyjRSuSHjolb98q9kx"),
-     *              @OA\Property(property="user", ref="#/components/schemas/User")
+     *              @OA\Property(property="user", type="object",
+     *                  @OA\Property(property="name", type="string", example="John Doe"),
+     *                  @OA\Property(property="email", type="string", format="email", example="jhon@gmail.com"),
+     *                  @OA\Property(property="role", type="string", example="customer"),
+     *                  @OA\Property(property="updated_at", type="string", format="date-time", example="2023-11-02T14:03:55.000000Z"),
+     *                  @OA\Property(property="created_at", type="string", format="date-time", example="2023-11-02T14:03:55.000000Z"),
+     *                  @OA\Property(property="id", type="integer", example=1),
+     *              )
      *          )
      *     ),
      *     @OA\Response(response="422", description="Unprocessable Content"),
@@ -46,6 +57,8 @@ class AuthController extends Controller
         $validator = Validator::make($request->all(), [
             'name' => 'required|string|max:255',
             'email' => 'required|string|email|max:255|unique:users',
+            'phone_number' => 'required|string|max:255',
+            'address' => 'required|string|max:255',
             'password' => 'required|string|min:8|confirmed'
         ]);
 
@@ -56,20 +69,24 @@ class AuthController extends Controller
         $user = User::create([
             'name' => $request->name,
             'email' => $request->email,
-            'password' => Hash::make($request->password)
+            'password' => Hash::make($request->password),
+            'role' => Role::CUSTOMER
+        ]);
+
+        Customer::create([
+            'user_id' => $user->id,
+            'phone_number' => $request->phone_number,
+            'address' => $request->address
         ]);
 
         $token = $user->createToken('token')->plainTextToken;
 
-        return response([
-            'token' => $token,
-            'user' => $user
-        ], Response::HTTP_CREATED);
+        return response(['token' => $token, 'user' => $user], Response::HTTP_CREATED);
     }
 
     /**
      * @OA\Post(
-     *     tags={"Authentication"},
+     *     tags={"authentication"},
      *     path="/login",
      *     summary="Login a new user",
      *     @OA\RequestBody(
@@ -80,7 +97,7 @@ class AuthController extends Controller
      *     ),
      *     @OA\Response(
      *          response="200",
-     *          description="Ok",
+     *          description="Successfull operation",
      *          @OA\JsonContent(
      *              type="object",
      *              @OA\Property(property="token", type="string", example="0|WYgnFtfJU6oMR8Q852lFPjtyjRSuSHjolb98q9kx"),
@@ -94,14 +111,13 @@ class AuthController extends Controller
     {
         $credentials = $request->only('email', 'password');
 
-        if (Auth::attempt($credentials)) {
-            $user = $request->user();
-            $token = $user->createToken('token')->plainTextToken;
-
-            return response(['token' => $token, 'user' => $user], Response::HTTP_OK);
+        if (!Auth::attempt($credentials)) {
+            return response(['errors' => 'Unauthorized'], Response::HTTP_UNAUTHORIZED);
         }
 
-        return response(['errors' => $request->password], Response::HTTP_UNAUTHORIZED);
-        return response(['errors' => 'Unauthorized'], Response::HTTP_UNAUTHORIZED);
+        $user = $request->user();
+        $token = $user->createToken('token')->plainTextToken;
+
+        return response(['token' => $token, 'user' => $user], Response::HTTP_OK);
     }
 }
